--- a/src/components/styles/SearchBar.scss
+++ b/src/components/styles/SearchBar.scss
@@ -2,28 +2,21 @@ $black: rgba(28, 28, 28, 1);
 $white: rgba(255, 255, 255, 1);
 $gray-1: rgba(223, 223, 223, 1);
 
-.search-container {
+.input-container {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  margin: 20px 0 20px 20px;
+  align-items: center;
+  margin-top: 28px;
+  position: relative;
 
   h4 {
     color: $black;
     font-weight: 600;
     font-size: 24px;
   }
-}
-
-.input-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
 
   input {
-    width: 335px;
+    width: 287px;
     height: 48px;
     padding: 12px 16px;
     border: 1px solid $gray-1;
@@ -41,31 +34,15 @@ $gray-1: rgba(223, 223, 223, 1);
     right: 0;
     top: 0;
   }
-}
 
-.search-button {
-  background-color: transparent;
-  cursor: pointer;
-
-  img {
-    width: 24px;
-    height: 24px;
+  .search-button {
     background-color: transparent;
-  }
-}
+    cursor: pointer;
 
-@media (min-width: 768px) {
-  .search-container {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    justify-content: space-between;
-    margin: 32px 20px 0 32px;
-  }
-
-  .input-container {
-    input {
-      width: 287px;
+    img {
+      width: 24px;
+      height: 24px;
+      background-color: transparent;
     }
   }
 }
