--- a/src/components/styles/Table.scss
+++ b/src/components/styles/Table.scss
@@ -5,7 +5,8 @@ $black: rgba(28, 28, 28, 1);
 table {
   width: 100%;
   border-collapse: collapse;
-  border-spacing: 0;
+  table-layout: fixed;
+
   thead {
     tr {
       height: 47px;
@@ -17,6 +18,7 @@ table {
       font-size: medium;
       font-weight: 500;
       text-align: start;
+      text-transform: uppercase;
 
       &:first-child {
         border-top-left-radius: 8px;
@@ -45,6 +47,7 @@ table {
       color: $black;
     }
   }
+
   img {
     margin-top: 8px;
     margin-left: 32px;
